# Skill-Bubble

./: .gitignore  README.md  README.zh.md  index.json  package-lock.json  package.json  pyproject.toml
cli/: sb.js
examples/hello-skill/: SKILL.md
skill_bubble/: __init__.py  cli.py  hub.py  hubs.py  loader.py  registry.py  svg_export.py  visualizer.py
skills/build-ixrt/: SKILL.md
skills/skill-bubble/: SKILL.md
src/: github.js  installer.js  registry.js  validator.js
tests/: github.test.js  installer.test.js  validator.test.js
ui/: index.html
web/: data.json  index.html
