[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-bubble"
version = "0.1.0"
description = "A visual skill manager for AI agents — usage makes bubbles grow"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "requests>=2.31",
]

[project.scripts]
sb = "skill_bubble.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["skill_bubble*"]
